[workspace]
members = ["infinite-rs", "infinite-rs-derive"]
resolver = "2"

[workspace.package]
authors = ["Surasia"]
documentation = "https://docs.rs/infinite-rs"
repository = "https://github.com/Surasia/infinite-rs"
categories = ["encoding", "games", "parsing"]
keywords = ["halo", "halo-infinite", "game-hacking", "reverse-engineering"]
readme = "README.md"
license = "Unlicense OR MIT"
edition = "2021"
rust-version = "1.80"

[profile.release]
lto = "fat"
incremental = true
