[package]
name = "infinite-rs-derive"
description = "Derive macros for `infinite-rs`"
version = "0.1.1"
authors.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true


[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.91"
quote = "1.0.37"
syn = "2.0.89"

[dev-dependencies]
infinite-rs = { path = "../infinite-rs"}
